# Computer-Programming-Classes

./: README.md
sem1_football_players_career/: Barcelona.txt  Bielsko.txt  JanKowalski  LionelMessi  MaciejBuchwald  funkcje.cpp  funkcje.h  pilkarz.cpp  struktury.h
sem2_words_statistics/: funkcje.c  funkcje.h  projekt_dlugosciwyrazow.c  projekt_dlugosciwyrazow.sln  projekt_dlugosciwyrazow.vcxproj  projekt_dlugosciwyrazow.vcxproj.filters  struktury.h  tekst.txt  wynik.txt
sem2_words_statistics/Debug/: projekt_dlugosciwyrazow.exe.recipe  projekt_dlugosciwyrazow.ilk  projekt_dlugosciwyrazow.obj.enc  projekt_dlugosciwyrazow.vcxproj.FileListAbsolute.txt  vc142.idb
sem2_words_statistics/Debug/projekt_.0955f597.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  projekt_dlugosciwyrazow.lastbuildstate
sem3_warehouse/: GodzSprzedazy.cpp  GodzSprzedazy.h  Klawiatura.cpp  Klawiatura.h  Sluchawki.cpp  Sluchawki.h  Zestaw.cpp  Zestaw.h  alejka.cpp  alejka.h  lista_alejek.cpp  lista_alejek.h  magazyn.csv  magazyn.sln  magazyn.vcxproj  magazyn.vcxproj.filters  main.cpp  mysz.cpp  mysz.h  plik_sprzedaz.txt  sprzet.cpp  sprzet.h
sem3_warehouse/x64/Debug/: magazyn.exe.recipe  magazyn.ilk  magazyn.vcxproj.FileListAbsolute.txt  vc142.idb
sem3_warehouse/x64/Debug/magazyn.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  magazyn.lastbuildstate
sem4_tamagotchi/: README.md
sem4_tamagotchi/Tamagotchi/: CMakeLists.txt  aktywnosci.cpp  aktywnosci.h  choroba.cpp  choroba.h  doktor.cpp  doktor.h  jedzenie.cpp  jedzenie.h  kot.cpp  kot.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  parametry.cpp  parametry.h  pies.cpp  pies.h  resource.qrc  scena.cpp  scena.h  sen.cpp  sen.h  uzytkownik.cpp  uzytkownik.h  zabawa.cpp  zabawa.h  zwierze.cpp  zwierze.h
